--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
-              class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">James Hernandez</a>
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -274,7 +278,8 @@
                 <a href="#"><i class="fa fa-behance" target="_blank"></i></a>
                 <a href="https://github.com/JamesHdz" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="https://www.instagram.com/jamesmhdz/" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/jamesmhernandez/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/jamesmhernandez/" target="_blank"><i
+                    class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
