--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <ul class="works-grid works-grid-gut works-hover-w works-grid-3" id="works-grid">
           <li class="work-item illustration webdesign"><a
               href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">
-              <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.png" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.jpg" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
                 <h3 class="work-title">Packstr</h3>
@@ -147,7 +147,7 @@
           <li class="work-item marketing photography"><a
               href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
               target="_blank">
-              <div class="work-image"><img src="assets/images/portfolio/FindMyFitIcon.png" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/FindMyFit.jpg" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
                 <h3 class="work-title">Find My Fit</h3>
@@ -158,7 +158,7 @@
           <li class="work-item illustration photography"><a
               href="https://docs.google.com/presentation/d/1D6ubbLH-KYw3eORU3NbESYzsaq4U8lElN36Cg6FG4tY/edit?usp=sharing"
               target="_blank">
-              <div class="work-image"><img src="assets/images/portfolio/SaveAnAngelIcon.png" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/SAAIcon.jpg" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
                 <h3 class="work-title">Save An Angel</h3>
